--- a/manage/pmp/7-成本管理.md
+++ b/manage/pmp/7-成本管理.md
@@ -10,6 +10,8 @@
     https://wenku.baidu.com/view/ad42f82259fb770bf78a6529647d27284b733743.html
 # 集成备考知识点精讲之项目成本管理考情分析_系统集成项目管理工程师_软件水平考试_希赛网 
     http://www.educity.cn/rk/1778498.html
+# PMP计算题详细解析第五版-2014 - 豆丁网 
+    http://www.docin.com/p-958652254.html    
 
 * 解析：用德尔菲方法估算一个活动的成本，三个回合后的结果如下表所示（数值表示活动时间），如果每小时的成 - 试题库 - 信管网 http://www.cnitpm.com/pm1/40211.html
 
@@ -209,3 +211,1020 @@ EVM期望货币值计算公式：选择项目决策（定量风险分析） EMV=
 
 沟通渠道=N（N-1）/2
 显示全文
+
+
+# PMBOK指南（第5版）自测101-200题_seahill_新浪博客 
+    http://blog.sina.com.cn/s/blog_4d2d43010101gcki.html
+
+101. 参阅以下网络图，分别计算活动B、D的自由时差
+习题101.jpg 
+A．10，0
+B．0，10
+C．0，0
+D．10，10
+
+102. A company wants to start a new product line.The following activities were identified by the project manager. 
+102.jpg 
+Activity D was delayed due to the unavailability of a raw material.How many days fo delay could the project manager absorb without delaying the project?
+A. 15 days
+B. 20 days
+C. 10 days
+D. 30 days
+102. 一家公司希望开始一个新的产品线。项目经理确定了下列活动
+103.jpg 
+活动D资源缺乏,要延迟交货。在不影响项目进度的情况下，项目经理最多允许活动D延迟几天?
+A. 15天
+B. 20天
+C. 10天
+D. 30天
+
+103. 项目经理认为某个项目不可能按进度计划完成，那么他可能的依据是？
+A．没有足够的资源进行赶工
+B．没有使用关键路径法
+C．关键路径上的某活动最早结束时间晚于最晚开始时间
+D．某关键活动存有负浮动时差
+
+104. One of the project in your company is using a software, and senior management want you to prepare an cost estimation for this software using for other projects, you shall use？
+A． Analogous Estimating
+B． Parametric Estimating
+C． Three point Estimating
+D． Bottom up estimating
+104.你公司中的一个项目正在使用一款软件，高级管理层要你准备就此款软件用于公司其他项目作一个成本估算，你将使用？
+A．类比估算
+B．参数估算
+C．三点估算
+D．自下而上估算
+
+105. 项目经理已经把成本定为该项目的一个关键制约因素，但是客户希望项目能提前完工，请问项目经理应采用下列哪种措施予以实现？
+A. 赶工
+B. 资源平衡
+C. 快速跟进
+D. 关键路径法
+
+106. 有几个项目活动，活动D,F是活动C的完成后开始，E在D完成后开始，活动A,B在活动C开始后就可以开始了，但是必须在项目结束前完成。活动A历时4天，活动B历时3天，活动C历时4天，活动D历时2天，活动E历时3天，活动F历时4天。实际开工时，活动B在活动C开始后1天后开始，并且因为事故需要2天延期。如果项目需要按时完成，需要怎么做？
+A. 在B上增加资源
+B. 在D上增加资源
+C. 在E上增加资源
+D. 在关键路径上进行资源再分配
+
+107. 项目B由于前面的项目经理管理不善，你被任命为新的项目经理。你在核对项目文件后发现项目周期14个月，其中前8个月的主要资源都被更高级别的项目A拿去了，无法参与项目B，第九个月开始才可能参与B项目。你作为项目经理如何应对？
+A. 与项目A的干系人协调, 缩短资源在A项目的工作时间
+B. 审核项目B的情况，并与发起人商谈  
+C. 前八个月继续项目，第九个月开始赶工争取按时完成B项目
+D. 在风险登记册中记录，继续项目
+
+108.项目经理通过关键路径法计算活动所需的时间，得出活动A需要4天完成，活动B必须
+在活动A完成后开始，需要3天时间，活动C在活动B完成后开始，需要2天时间，活动D在活动A开始一天后才可以开始，需要2天时间完成，活动E在活动C和D完成之后开始，需要5天时间完成。而在实际的执行过程中，由于发生了风险，导致活动D延迟了两天才完成。
+请问在这种情况下会出现下列哪项？
+A. 项目可以按时完成
+B. 项目会延迟一天完成
+C. 项目会延迟两天完成
+D. 应对活动D进行赶工
+
+109. 项目经理接受了一个新项目，和项目团队一起制定项目管理计划。目前已经通过了正向和反向分析项目进度网络图。
+接下来需要进行哪项工作？
+A. 找出浮动时间为零或负数的关键路径
+B. 确认各活动的排序类型 
+C. 估算关键路径上的活动资源
+D. 估算次关键活动的成本
+
+110. 项目经理刚接手一个项目，但是总经理下周就要和客户开会讨论，希望项目经理能尽快做出一个关于项目的成本估算，那么项目经理应该采用哪种方法？
+A．类比估算
+B．参数估算
+C．自下而上估算
+D．三点估算
+
+111. During project execution,the project manager observes that a team member is underutilized. Resource leveling aims to do which of the following？
+A. Minimizes the variations in resource loading
+B. Maximizes the variations in resource loading
+C. Minimizes the loading of resources
+D. Maximizes the motivation of team member
+111. 在项目执行期间，项目经理发现某个项目人员工作比较空闲，采用资源平衡是为了？
+A. 减少资源负荷变化
+B. 增大资源负荷变化
+C. 减少资源负荷
+D. 增大项目人员工作积极性
+
+112. 某项目共有7个活动（括号中为工期，单位：天数）：A（2）,B（2）,C（4）,D（3）,E（4）,F（4），G(4)。活动之间的依赖关系是：B,C开始依赖A完成，D开始依赖B完成，E开始依赖D完成，F开始依赖C完成，G开始依赖E，F完成，其中A，C工期不能调整，任何任务都不能快速跟进，想整体进度压缩2天，应该如何调整？
+A.  A(-1)，E(-1)，F(-2)
+B． C(-1)，E(-1)，F(-2)
+C.  D(-1)，E(-1)
+D.  D(-1)，E(-1)，F(-2)
+
+113. 以下哪个技术可用于已经过关键路径法分析的进度计划？
+A. 快速跟进 
+B. 资源负荷 
+C. 赶工 
+D. 资源平衡
+
+114. 对项目进行赶工，需要对以下哪二个因素进行平衡？ 
+A. 范围和进度
+B. 成本和质量 
+C. 范围和成本 
+D. 成本和进度
+
+115. 关于里程碑与里程碑清单的说法，不正确的是？
+A. 里程碑清单是可交付成果
+B. 里程碑清单列出了所有里程碑
+C. 里程碑是消耗时间和资源为零的活动
+D. 里程碑分为强制性和可选择性
+
+116. 项目经理因项目时间限制而决定将赶工作为首选措施。应该采取下列哪项行动？
+A. 额外增加资源，以加快关键路径上的交付
+B．采用双倍资源，加快其关键路径上的交付
+C. 在测试完成前，开始产品生产 
+D. 压缩重叠活动，努力缩短工期
+
+117. 对项目进行赶工，会导致最可能的后果是？
+A. 风险增加，且质量降低
+B. 成本增加，且风险增加
+C. 风险增加，且质量不变
+D. 风险增加，且成本不增加
+
+118. 当针对进度偏差决定采取纠正措施时，以下哪一项需要被考虑? 
+A. 关键活动的短暂的延误
+B. 非关键活动的大规模延误
+C. 非关键活动的短暂延误
+D. 时差为正的活动
+
+119. 项目计划报告给客户，客户审核项目计划后，要求项目的进度压缩到原来的50%。项目经理决定对关键路径中的任务增加一倍的资源，将会对项目产生什么样的后果？
+A．沟通渠道的增加导致项目进度可能被缩短
+B．关键路径中的关键点的压缩被拉长
+C．成本增加
+D．由于资源的增加导致项目进度被缩短
+
+120. After identifying all tasks to be carried out in the project,the project manager allocates the tasks to each team member based on their skills.The project manager refers to which of the following documents？
+A. Work breakdown structure
+B. Resource breakdown structure
+C. Responsibility assignment matrix
+D. Organizational breakdown structure
+120. 在确定项目中所需要开展的所有任务后，项目经理结合每个团队成员的技术和能力分配任务。项目经理参考了以下哪一项文件？
+A.  工作分解结构 
+B.  资源分解结构 
+C.  职责分配矩阵 
+D.  组织分解结构
+
+121. 回报模型包括？
+A．衡量从开始到完成所有成本
+B．收回项目投资所需的时间
+C．计算完工的时间和成本
+D．计算项目成本，将时间作为数因子
+
+122. 如何争取更多的经济价值？ 
+A. 早开发票
+B. 晚开发票
+C. 晚收到现金
+D. 早收到现金
+
+请参阅以下信息，回答问题123和124
+Project manager is managing a five months’project with cost-reimbursable contract and has a total of 500 tasks.of which 100 are completed after two months.All tasks cost and duration are equally dispersed over the months.The following diagram expresses the performance.
+项目经理管理一个为期五个月的成本补偿合同的项目，有500项任务，该项目已经运行了两个月，其中100项任务已经完成，所有任务在成本和期限方面类似，均匀分散在各月中。
+下图说明业绩指标：
+164.jpg 
+123. How many more months would the project manager expect to finish the project?
+A. 4 months
+B. 8 months
+C. 5 months
+D. 10 months
+123.项目经理预期完成项目还需要多少个月?
+A．4个月
+B．8个月
+C．5个月
+D．10个月
+
+124.参阅该图，下列选择何种最有可能造成与基准的偏差?
+A．延迟分配资源   
+B．低估第一阶段的工作努力
+C．高估期限
+D．延迟启动项目
+
+125. 为完成一个项目，项目最可能需要的费用在 100万美元，最高需要125万美元，最低需要90万美元。需要考虑？
+A.  直接成本、沉没成本、应急准备金    
+B． 直接成本、间接成本、沉没成本
+C． 直接成本、间接成本、应急准备金
+D． 间接成本、沉没成本、应急准备金
+
+126. SPI的计算公式涉及哪一项？
+A. AC
+B. BAC
+C. EAC 
+D. PV
+
+127. 一个项目，BAC =150000，SPI= 1.5，那么EAC是多少？
+A. 150000
+B. 100000
+C. 125000
+D. 无法判断
+
+128. 某项目BAC=5000，AC=1200，EV=1000，PV=900，请计算目前的项目进度和EAC。
+A.  16．7%，5000
+B.  20%， 5000
+C.  20%， 6000
+D.  16.7%，6000
+
+129. 有一个项目BAC=30000,预计5个月完成。已经做了三个月了，花掉的成本18000，预算和进度都是符合要求的。按这个情况，三个月后，挣值（EV）将是多少？
+A．12000 
+B．18000
+C. 36000
+D．30000
+
+130. 有二个项目：
+A项目CPI=0.9, SPI=1.2, CV=10
+B项目CPI=1.1，SPI=0.8, SV=-5
+那么？
+A．项目A成本超支，进度落后
+B．项目A成本超支，进度提前     
+C．项目B成本节约，进度落后     
+D．项目B成本节约，进度提前
+
+131. 项目从规划，执行至运行所产生的成本叫?
+A. 生命周期成本
+B. 质量成本
+C. 采购成本
+D. 沉没成本
+
+132. A项目，SPI=0.8，CPI=0.8。B项目，CPI=1.05，SPI=1.10,问A、B项目目前的的状态？
+A. A项目进度提前，成本节约；B项目进度提前，成本节约
+B．A项目进度提前，成本节约；B项目进度落后，成本超支
+C. A项目进度落后，成本超支；B项目进度提前，成本节约
+D. A项目进度落后，成本超支；B项目进度落后，成本超支
+
+133. 下面哪项是对目前项目进度效率的正确表达？
+A. CPI=EV/AC 
+B. SPI=EV/AC 
+C. SPI=EV/PV 
+D. CPI=EV/PV 
+
+134. 项目目前进度 50%，计划完成 4000 码，实际完成8000码，价格是1美元/码，那么：
+A. CV=4000
+B. SPI=2
+C. SPI=0.5
+D. SV=0.5
+
+135．关于应急储备，以下说法正确的是？
+A. 不重要，在项目收尾时可以取消
+B. 在项目规划和执行都需要考虑，随着项目信息越来越明确，可以动用、减少或取消应急储备
+C. 始终保持不变，直到项目结束
+D. 专门针对未知风险的储备
+
+136. 有下面4个项目备选，由于资源有限，只有一个项目可以实施。今年的投入需要等到明年年底才会有收益。
+从ROI的角度分析会选择哪一个项目？
+16.jpg 
+A. A
+B. B
+C. C
+D. D
+
+137. 以下哪项是估算成本过程的输入？
+A. 工作分解结构
+B. 成本基准
+C. 合同
+D. 资源日历
+
+138. The indirect cost should be managed by？
+A. Cost Auditor
+B. Project manager
+C. Executive Management
+D. Account Controller 
+138. 谁负责间接成本的管理?
+A. 成本审计员
+B. 项目经理
+C. 执行管理层
+D. 财务经理
+
+139. 你的发起人宣称你的项目又拿到了一大笔资金，接下来你应该？
+A. 修改风险管理计划
+B. 修改范围管理计划
+C. 修改进度管理计划
+D. 修改成本管理计划
+
+140．项目最初的预算（BAC）为8000元，完工工期是20天。执行2天后进行度量，CPI为 1.25。如果按目前的状况执行下去，那么最新的完工工期是多少天？
+A. 20
+B. 18
+C. 15
+D. 无法判断
+
+141. 高层通过以下哪项来看资源利用率的情况？
+A. SPI
+B. SV
+C. CPI
+D. CV
+
+142. 领导向项目经理询问SPI，他想知道什么？
+A．项目进行的效率
+B．项目何时完成
+C．项目完成时的预算
+D．项目的资源利用率
+
+143.Your company are considering which projects (A and B) to select:
+Project A, payback period 24 months.
+Project B, with the total investment of $120,000, in the first year has the positive cash flow of $60,000, and in the first quarter of the second year has the positive cash flow of $30,000, and the following months shall be the same, so you will choose:
+A. Project A, because Its payback period is better than the project B short 6 months 
+B. Project B, because Its payback period is better than the project A short 6 months
+C. Project A or project B, because their payback periods are same
+D. Information is insufficient, can not calculate
+你们公司正在考虑选择项目（A和B）：
+项目A，投资回报期是24个月。
+项目B，总投资额是120,000美元，第一年会有60，000美元的正现金流，在第二年的第一个季度会有30，000美元的正现金流，接下来的月份里都会这样，你将选择？
+A.项目A，因为它的投资回报期比项目B短6个月
+B.项目B，因为它的投资回报期比项目A短6个月
+C.项目A或者项目B，因为它们的投资回报期是一样的
+D.信息不足，无法计算
+
+144. A project manager uses the cost of individual work packages that have the greatest level of details to generate the cost estimates for a project.
+This cost estimating technique is known as which of the following?
+A. Parametric estimating
+B. Bottom-up estimating
+C. Analogous estimating
+D. Rough order-of-magnitude estimating
+144. 项目经理利用最底层的各个工作包的成本，来对整个项目做出成本估算。
+这种成本估算技术被称为以下哪一种？
+A. 参数估算
+B. 自下而上的估算
+C. 类比估算
+D. 量级估算
+
+145. 项目现在状态是CPI=0.8，SPI<1，发起人要求用成本赶上进度。
+问在消耗了成本之后，项目的情况将是？
+A. CPI小于1，进度延迟
+B. CPI大于1，进度延迟
+C. CPI小于1，进度延迟
+D. CPI小于1，进度符合
+
+146. Project manager is managing a five months’project with cost-reimbursable contract and has a total of 500 tasks.of which 100 are completed after two months.All tasks cost and duration are equally dispersed over the months.The following diagram expresses the performance.
+How many more months would the project manager expect to finish the project?
+A.4 months
+B.5 months
+C.8 months
+D.10 months
+146. 项目经理管理一个为期五个月的成本补偿合同的项目，有500项任务，该项目已经运行了两个月，其中100项任务已经完成，所有任务在成本和期限方面类似，均匀分散在各月中。业绩指标如下图：
+26.jpg 
+项目经理预测完成该项目还需要多少个月?
+A．4个月
+B．5个月
+C．8个月
+D．10个月
+
+147．项目的第十个月，所完成任务的预期成本是2000元， 所完成任务的实际成本是1000元，预算的实际成本（budgeted actual cost）是8000元，请问估算的实际成本（estimated actual cost）是多少？
+A．7000
+B．8000
+C．10000
+D．11000
+
+148. 项目PV=6000，EV=4000，AC=9000,项目进度延迟。
+出现这种情况应该由谁来负责？
+A. 项目经理
+B. 高级经理
+C. 职能经理
+D. PMO
+
+149. 项目经理通过挣值计算得到绩效指标如下：SPI=1.05，CPI=0.86。这说明？
+A．进度提前，成本结余
+B．进度落后，成本结余
+C．进度提前，成本超支
+D．进度落后，成本超支
+
+150. 项目经理被批准执行一个为期三年的项目。三个月后，PV=100，EV=80，AC=90，项目经理计算完进度绩效指数和成本绩效指数。
+下一步应该做什么？
+A. 偏差分析
+B. 更改成本和进度基准
+C. 创建变更请求
+D. 要求更多资金
+
+151. 项目经理在某一个时点来检查项目的绩效，计划成本=290，挣值=300 实际成本=250，问现在项目状态是？
+A. 进度提前
+B. 进度落后
+C. 完工时成本节约
+D. 完工时成本超支
+
+152. 一项目的CPI为1.04，预计成本为200,000，如果保持这个趋势，问实际完工后的成本将是多少？
+A. 200,000
+B. 208,000
+C. 192,308
+D. 无法确定
+
+153. 项目进度绩效指数是1.1, 成本绩效指数是0.8, 问下列哪项是对的?
+A. 符合进度, 预算符合
+B. 提前于进度, 预算超支
+C. 不提前于进度, 预算节约
+D. 提前于进度, 预算符合
+
+154. 管理储备是针对项目未知风险的，由谁来支配？
+A. 管理层
+B. 项目经理
+C. 职能经理
+D. 财务部门
+
+155. 一个为期三年的项目已经进行了一半，当前绩效为CPI=1.03，SPI=1.05。这时一个新项目进入项目组合中，新项目的优先级比当前项目高。项目组合经理将3名关键资源调入新项目中，并要求项目经理在不增加额外资源的情况下，按照原来的计划执行完成项目。
+请问项目经理这时最好的选择是？
+A. 执行资源平衡
+B. 赶工
+C. 提出变更请求
+D. 偏差分析
+
+156. 项目经理接手一个工程项目，要建设1.2公里的铁路。根据以往的类似项目，预算为100万美金，计划1个月铺设100米。已经进行了6个月，铺设了600米，花费了60万美金。项目经理需要向公司提交项目绩效报告，则应该如何报告？
+A. 进度符合要求，CPI是0.73，可以按时完成，但是预算可能会超支
+B. 进度符合要求，预算超支，但是无法预测未来绩效
+C. 进度符合要求，CPI是0.83，可以按时完成，但是预算可能会超支
+D. 预算符合要求，SPI是0.83，可以按预算完成，但进度可能会落后
+
+157. The cost variance and estimate to completion are all zero, and SPI=1.2, the project sponsor want to meet you to learn the current status of the project, so you will:
+项目CV=0，ETC=0，SPI=1.2，项目发起人想见你以便获悉目前的项目状态，你应该？
+A. 准备接受来自发起人的褒奖，因为项目已完成
+B. 项目无法继续，因为缺乏资金
+C. 惩罚团队，因为无法完成项目
+D. 项目中止，立即解散项目团队
+
+158. 项目活动成本估算如下：
+活动A=200元
+活动B=300元 
+活动C=400元
+活动D=500元
+现在项目活动A、B已经完成，实际成本信息如下：
+活动A=150元  
+活动B=350元
+项目团队为剩余活动执行了新的估算，估算结果如下：
+活动C=420元   
+活动D=480元
+项目经理怎样向发起人汇报项目成本绩效情况？
+A. 项目完工时成本将超过预算
+B. 项目完工时成本将低于预算
+C. 缺少信息，无法判断项目完工时成本情况
+D. 项目完工时成本将符合预算
+
+159. 一个项目严重延期。项目需要赶进度，管理层要给原本1个人做的一项任务增加5个人，项目经理认为这样的作用不大。
+这是因为项目经理知道？
+A. 收益递减法则
+B. 学习曲线
+C. 沉没成本
+D. 帕金森定律
+
+160. 在下面哪一个过程中，项目经理会考虑不同的成本选择方案？
+A. 控制成本 
+B. 制定预算
+C. 成本偏差 
+D. 估算成本 
+
+161. 从技术绩效测量的角度需要进行挣值管理，那么挣值管理的过程中涉及到？
+A．范围核实   
+B．实施质量保证    
+C．制定项目章程   
+D．工作分解结构
+
+162. 有二个项目，A项目CPI=0.9 ,SPI=1.075。B项目CPI=1.1，SPI=0.8，那么？
+A．项目A成本超支，进度落后
+B．项目A成本节余，进度提前
+C．项目B成本节约，进度落后
+D．信息不足，无法判断
+
+163. 质量成本包括下述哪些？
+A. 预防成本 Prevention Cost
+B. 评估成本 Appraisal Cost
+C. 失败成本 Failure Cost
+D. 上述所有 All of the above 
+
+164. 使用下列表中的数据，运用帕累拖定律，在何处采取行动最为有效？
+2.jpg 
+A. 样机
+B. 设计
+C. 开发
+D. 制造
+
+165. 质量审计是以下哪个项目管理过程的工具？
+A. 规划质量管理
+B. 控制质量
+C. 监控项目工作
+D. 实施质量保证
+
+166. 质量控制的七工具，是谁提出来的，并因此而闻名？　
+A. 克劳斯比
+B．田口玄一　
+C．国际标准化组织（ISO）
+D．石川　
+
+167. 质量政策是谁制订的? 
+A. 高层 
+B. 项目经理 
+C. 项目团队 
+D. 质量经理
+
+168. 您正在审查各种各样的暇疵和质量控制拒收的缺陷。利用有限的资源，您希望查明最经常发生的改善这种情况之机会的主要领域。并且确定纠正行动首先应考察何种领域。作为项目经理，以下哪一种工具最能满足您的需求?
+A．帕累托图
+B．因果图
+C．散点图
+D．相互关系图
+
+169. 抽查了一些数量的产品，检查是不是合格，目的是判断与标准是不是符合，这是采用哪种方法？
+A. 变量抽样
+B. 允差
+C. 控制范围
+D. 属性抽样
+
+170.  8个点都在控制线以内, 1个点靠近LCL，连续7个点靠近UCL，公司高级经理说这是7点规则，要求查找根本原因，项目经理应该怎么办? 
+A． 这是特殊原因，接受高级经理的建议
+B． 在根本原因被发现前，过程都是处于控制中
+C． 这是普通原因，但项目经理同意审查并且确认根本原因
+D．接受建议，但过程处于控制中
+
+171. 产品已经试验性推出市场了，但客户报告还有一些小问题。要对这个问题进行解决。问这个成本是什么成本？
+A．内部失败成本
+B．外部失败成本
+C．预防成本
+D．评价成本
+
+172． 在质量审计过程中发现有重大缺陷，会影响可交付成果的交付。修复这个缺陷花费的成本是?
+A． 质量保证成本
+B． 缺陷成本
+C． 质量控制成本
+D． 审计成本
+
+173. 过程改进是在以下哪个项目管理过程中发生的？
+A．规划质量管理
+B．实施质量保证
+C．控制质量
+D．实施质量基准
+
+174. 一个产品开发项目期间，项目经理必须确定生产过程是否稳定，应该使用以下哪一个方法？    
+A. 控制图     
+B. 鱼骨图   
+C. 趋势图  
+D. 帕累托图
+
+175. 项目进行中，项目经理识别出一个可交付成果产生了严重质量问题，随后召集团队成员和相关干系人召开会议讨论这个问题，问这是什么过程
+A.  实施质量保证
+B.  控制质量
+C.  规划质量管理
+D.  质量改进
+
+176. 有二个因素：性能、温度，当温度高于一定程度时，机器性能就失灵。你要确定这二个因素的关系，应该用什么？
+A. 散点图 Scatter Diagram 
+B．流程图 Flow Charting
+C. 控制图 Control Charts
+D. 直方图 Histogram
+
+177. 在散点图中，数据点接近对角线形状，那么？
+A. 无法判断
+B. 两个变量之间没有关联
+C. 两个变更之间的关系不紧密
+D. 两个变量之间的关系比较紧密
+
+178.  what will not cause high level customer satisfaction?
+A.  Understand customer expectations
+B.  Accept customer expectations
+C.  Evaluate customer expectations 
+D.  Manage customer expectations
+下面哪个不会增加客户满意度？
+A．了解客户期望
+B．接受客户期望
+C．评估客户期望
+D. 管理客户期望
+
+179. 有1000个产品，使用其中100个进行检查，使用了下述哪种质量控制的方法？
+A． 统计抽样
+B． 缺陷补救审查
+C． 检查
+D． 散点图
+
+180. 哪项工具能监控和提高实施质量保证过程的效率？
+A. 质量审计 Quality audit
+B. 过程分析 Process analysis
+C. 质量成本 Quality cost
+D. 产品分析Product analysis 
+
+181. 有一个风险被识别，但发生概率很小，如果发生影响很大，应该如何监控？
+A. 帕累托图
+B. 控制图
+C. 散点图
+D. 鱼骨图
+
+182. 一家公司对所生产的一批产品进行抽查，目的是看该产品的合格程度，这是采用以下哪种方法？
+A. 变量抽样
+B. 属性抽样
+C. 允差
+D. 控制范围
+
+183. 下面哪一项不是质量成本？
+A. 防止产品或服务不符合要求而发生的成本  
+B. 保证符合要求而对产品或服务进行评估所发生的成本 
+C. 超出产品或服务要求而发生的成本 
+D. 产品或服务没有满足要求而产生的成本 
+
+184. 确定哪些因素会影响结果，应该采用什么工具？
+A. 实验设计
+B. 质量成本
+C. 标杆对照
+D. 控制图
+
+185. 帕累托图的主要目的是什么？
+A. 帮助采取纠正措施correct action
+B. 直观地显示出各种因素如何与潜在问题或结果相互联系
+C. 反映某种变化的历史和模式
+D. 显示两个变量之间的关系
+
+186. 项目已失败，项目团队成员仍在项目完成之时和项目完成之后消耗资源，这将产生以下哪种成本？ 
+A. 一致性成本
+B. 预防成本
+C. 缺陷成本 
+D. 评估成本
+
+187.项目经理正在参考图表，并问高级技术人员过程是否在控制范围内。项目经理在使用什么方法？
+A. 散点图
+B. 控制图
+C. 趋势图
+D. 直方图
+
+188.出现以下哪种情况，可以判断过程失控？
+A. 连续六个点偏上
+B. 连续七个点偏上
+C. 七个点偏上
+D. 所有点偏上
+
+189. 下面哪个因素对客户满意度影响最大？ 
+A. 预防 Preventive
+B. 缺陷补救 Defect Repair
+C. 适用性 Fitness for use
+D. 纠正措施 Corrective Action
+
+190. 下面哪项是质量成本的最适当描述？ 
+A. 内部成本
+B. 非一致性成本和缺陷成本的总和
+C. 项目的所有活动成本
+D. 一致性成本和缺陷成本的总和
+
+191. Where is cost of quality included to？
+A. Quality Plan and Quality Control
+B. Quality Plan and Quality Assurance
+C. Quality Policy and Quality Audit
+D. Quality Policy and Quality Report
+191. 质量成本包括什么？ 
+A. 质量规划和质量控制
+B. 质量规划和质量保证
+C. 质量政策和质量审核
+D. 质量政策和质量报告
+
+192. 项目经理应了解，现代质量管理与项目管理之间存在共同目标，其中两项目标是？
+A. 时效性与良好的项目治理
+B. 客户满意度与获利率
+C. 预防胜于检查与管理层的责任
+D. 持续改进与追加订单
+
+193. 下列哪项是规划质量管理过程所使用的工具？
+A．控制图 Control Charts
+B．质量成本 Cost of quality 
+C．帕累托图 Pareto diagram
+D．质量审计 Quality audit
+
+194. 用于提示包括主要因素在内的与众多项目之间的关系，用哪种工具或方法？
+A. 控制图
+B. 帕累托图
+C. 鱼骨图
+D. 散点图
+
+195. 实验设计可以系统地改变多少个因素?  
+A．2个
+B．想设多少均可
+C．3个 
+D．5个
+
+196. The project manager is completing the project the final product is finished,all defects found to date are corrected and the product is delivered to the client.The project manager announces the end of project. A week later the client contacts the project manager because they found a defect and they want to project manager to repair it.The client claims that the project is not yet closed because they are still testing the product.
+How does the project manager respond to this situation?
+A. Tell the client that the project is finished and there will be no repairs to the defect because warranty period was not defined in the contract.
+B. Correct the defect and tell the client it’s the final repair to defects.
+C. Ask the client to send a change request to change the project scope statement.
+D. Correct the defect and get formal accept from client.
+196. 项目经理即将完成一个项目，最终产品已经完工，到目前为止发现的所有缺陷都已得到修正，并且产品已经交付给客户。因此，项目经理宣布项目结束。但一周后，由于客户发现了一个缺陷，他们便联系项目经理，希望项目经理能进行修理。客户声称项目还未结束，因为他们仍在对产品进行测试。
+发生这种情况，项目经理应该如何办？
+A. 告诉客户，项目已经完工，由于合同中未规定有任何保修期，因此不会对该缺陷进行修理。
+B. 修正该缺陷，并告诉客户这是最后一次对缺陷进行修正。
+C. 要求客户提交一份变更请求，修改项目范围。
+D. 修正该缺陷，并得到客户的正式验收。
+
+197．A project manager wants to identify the causes that product the large majority 
+of the problems or defects in a project.
+Which tool should the project manager use to help identify the problem areas?
+A. Pareto chart
+B. Flow chart
+C. Control chart
+D. Scatter diagram
+197.项目经理希望确定产生项目中大部分问题或缺陷的原因。
+为帮助确定问题，项目经理应该使用哪项工具？
+A. 帕累托图
+B. 流程图
+C. 控制图
+D. 散点图
+
+198. 有一个项目，监控的时候一个检测点在控制界限外面，请问项目经理怎么做？
+A． 过程失控，查找原因
+B.  过程受控，不采取任何措施
+C.  信息不足，难判断
+D.  该检测点由偶然因素引起，忽略不计
+
+199. Who is responsible for creating the quality management plan?
+A. Project manager
+B. Project manager and team members
+C. Quality manager
+D. Quality team
+99. 质量管理计划是谁负责制定的？
+A. 项目经理
+B. 项目经理及团队成员
+C. 质量经理
+D. 质量团队
+
+200. Which technique uses information based on “why-why” and “how-how” diagrams？
+A. Failure Mode Effective Analysis
+B. Root cause analysis
+C. Flow charting
+D. Parato diagram
+200. 以下哪项技术使用了基于“为什么-为什么”和“怎样-怎样”图的信息？
+A. 失效模式和影响分析
+B. 根本原因分析
+C．流程图
+D．帕累托图
+习题解答，2013年8月9日18：45更新
+
+101.参考答案：B，参见培训讲义P140。
+解析：本题考点为间接考自由时差的定义，即在保障不影响后续任务最早开始前提下活动可以开始和完成的机动时间。由此可算出活动B的自由时差=21-21=0；活动D的自由时差=21-11=10，故本题选B。
+
+102.参考答案：C。
+解析：有两条路径：
+路径1：A-B-E,为关键路径，共70天；
+路径2：A-C-D-E,为非关键路径，共60天。故计算出非关键活动D有10天的时差。
+
+103.参考答案：A，参见培训讲义P146。
+
+104.参考答案：A，参见培训讲义P126。
+解析：类比估算是在信息不足的情况下采用的一种粗略的、自上而下的估算方法。
+
+105.参考答案：C，参见培训讲义P146-147。
+
+106.参考答案：D。
+解析：有4条路径：
+路径1：C-D-E，为关键路径，4+2+3=9天；
+路径2：C-F，为非关键路径，4+4=8天；
+路径3：A，为非关键路径，4天
+路径4：B，为非关键路径1+2+3=6天
+选项D：资源再分配，是将资源从非关键活动重新分配到关键活动的做法，是使项目自始至终按可能接近原来为其设定的整体持续时间而经常采用的一种方法。
+
+107.参考答案：B。
+解析：项目资源使用有冲突，需与高层谈判并获得支持。
+
+108.参考答案：A。
+解析：关键路径为A-B-C-E，4+3+2+5=14天，而非关键活动D有6天的时差，所以活动D虽然延迟了2天但并不影响项目的整体进度。
+109.参考答案：A，参见培训讲义P135-137。
+110.参考答案：A，参见培训讲义P126。
+
+111.参考答案：A，参见培训讲义P142。
+解析：考资源平衡的作用，可用排除法进行选择。资源平衡是为了保持组员使用量处于均衡状态，即减少波动，故可排除选项B和C。资源平衡与项目组成员的工作积极性没有直接的关联，故排除选项D。
+
+112.参考答案：D。
+解析：
+关键路径：A-B-D-E-G，2+2+3+4+4=15天
+非关键路径：A-C-F-G，2+4+4+4=14天
+选项C调整后，关键路径将是A-C-F-G,14天
+（B任务在答案中没有出现，其他答案要么就是调整过了A,C，要么关键路径大于13）
+
+113.参考答案：D，参见培训讲义P142。
+
+114.参考答案：D，参见培训讲义P146。
+
+115.参考答案：C，参见培训讲义P114。
+解析：里程碑是时间点而不是活动。
+
+116.参考答案：A，参见培训讲义P146。
+
+117.参考答案：B，参见培训讲义P146。
+
+118.参考答案：A，参见培训讲义P151。
+
+119.参考答案：C，参见培训讲义P146。
+解析：加班、加钱、加资源都属于赶工犯愁，赶工最直接的后果就是导致成本增加。
+
+120.参考答案：B，参见培训讲义P124。
+解析：资源分解结构是根据资源的类别和类型划分的，其中资源类型就是指：技能水平、等级水平。根据题目，项目经理结合团队成员的的技术和能力分配任务，也就是参考团队成员的技能水平，即资源分解结构。而职责分配矩阵，更多是反映与工作相关的团队成员的角色、职责和职权等。
+PMBOK指南的名词解释中也有提到：资源分解结构是根据资源平衡以及编制资源约束型进度计划所需的资源类别和类型，对资源进行分类的层级结构，可用于识别和分析项目人力资源配备。
+
+--------------------------------------------------------------------------------------------------------
+
+
+121.参考答案:B。
+
+122.参考答案：D。
+
+123.参考答案：B，参见培训讲义P177。
+解析：均匀分布，2个月完成100项任务，还有400项任务，则需要8个月。
+
+124.参考答案：A。
+
+125.参考答案:C，参见培训讲义P154-155。
+
+126.参考答案：D，参见培训讲义P175。
+解析：考SPI的计算公式：SPI=EV/PV。
+
+127.参考答案：D,参见培训讲义P177。
+
+128.参考答案：C。
+解析:项目进度=EV/BAC=1000/5000=20%;
+EAC默认为典型偏差，EAC=BAC/CPI=BAC/(EV/AC)=5000/20%=6000。
+
+129.参考答案：D。
+解析：项目目前已经做了三个月了，而且预算和进度都是符合要求的，说明项目按目前的情况是可以按原计划完成任务（五个月）的，即两个月后就能达到EV=BAC。
+
+130.参考答案：C，参见培训讲义P179。
+A项目CPI=0.9，CV=10，是矛盾的，理解为A项目是干扰项
+
+131. 参考答案：A。参见培训讲义第153页
+
+132.参考答案：C，参见培训讲义P179。
+解析：A项目SPI、CPI都小于1，说明项目进度落后，成本超支，排除选项A和B；
+      B项目SPI、CPI都大于1，说明项目进度提前，成本节约，故排除选项D。
+
+133.参考答案：C，参见培训讲义P175。
+解析：1、考SPI和CPI的计算公式，SPI=EV/PV,CPI=EV/AC；
+      2、反映项目进度效率的是进度绩效指数SPI，而非成本绩效指数CPI。
+
+134.参考答案：B。
+计划完成4000码，每码1美元，说明PV=4000元。
+实际完成8000码，每码2美元，说明EV=8000元。
+SPI=EV/PV=2
+
+135.参考答案：B，参见培训讲义P131。
+
+136.参考答案：D，参见培训讲义P160。
+解析：ROI是静态的，年利润/投资额，是指每年的平均利润。
+选项A：（12-6）/6=1；
+选项B：（17-8）/8=9/8；
+选项C：（12-6）/6=1；
+选项D：（10-4）/4=6/4。
+贴现率是指将未来资产折算成现值(present value)的利率，参见培训讲义P158。
+PV=FV/（1+R）n
+利率是指把现值换算成未来值
+FV=PV*(1+R)n
+
+137.参考答案：A，参见讲义P162，范围基准中的工作分解结构
+解析：属于PMBOK指南第三版本的题。
+
+138.参考答案：C，参见培训讲义P154。
+
+139.参考答案：D，参见培训讲义P156。
+
+140. 参考答案：D，参见培训讲义P177。
+解析：因为缺SPI，CPI=EV/AC，SPI=EV/PV，缺PV值。
+
+--------------------------------------------------------------------------------------
+
+141.参考答案：C， 参见培训讲义P175。
+解析：选项B、D表示偏差，选项A反映的是时间利用效率。
+
+142.参考答案：A，参见培训讲义P175。
+
+143.参考答案：B，参见培训讲义P159。
+解析：投资回报期就是投资回收期。正现金流是指收入的现金量（销售、已获利息、发行股票等等）。“正现金流”就意味着你在投资的过程中，能够确保投资的收益高于投资的成本，如房产的投资者，租金的收入能够高出还贷的支出，那么即使房地产市场出现波动，这样的投资仍然是安全的。
+
+144.参考答案：B，参见培训讲义P162。
+
+145.参考答案：D，参见培训讲义P146。
+
+146.参考答案：C，参见培训讲义P176。
+解析：SPI=EV/PV=100/200=0.5，最新完工所需时间=5/0.5=10月，还需要10-2=8月。
+
+147. 参考答案：A，参见培训讲义P177。
+解析：EV=2000,AC=1000,BAC=800，0CPI=EV/AC=2
+典型偏差：EAC=BAC/CPI=8000/2=4000
+非典型偏差：EAC=AC+(BAC-EV)=1000+（8000-2000）=7000
+
+148.参考答案：A。
+
+149.参考答案：C，参见培训讲义P179。
+
+150.参考答案：A。
+解析：项目进度控制的重要工作包括：分析相对于进度基准的偏差原因与程度，并确定是否需要采用纠正或预防措施。通过分析进度偏差以及审查项目进展报告、绩效测量结果和进度调整情况，可能会对进度基准和/或项目管理计划的其他组成部分提出变更请求。选项A偏差分析是工具，选项C变更请求是输出，选项B是变更后的结果。
+
+151.参考答案：A，参见培训讲义P179。
+解析：目前成本节约，不代表完工时成本也会节约。
+
+152.参考答案：C，参见培训讲义P177。
+解析：“如果保持这个趋势“--典型偏差。
+预计成本是BAC，实际完工成本EAC=BAC/CPI=200000/1.04=192,307.692。
+
+153.参考答案：B，参见培训讲义P179。
+
+154.参考答案：A。
+
+155.参考答案：D，参见培训讲义P151。
+解析：非关键活动延误，不需要采用纠正措施。项目进度控制的重要工作包括：分析相对于进度基准的偏差原因与程度，并确定是否需要采用纠正或预防措施。通过分析进度偏差以及审查项目进展报告、绩效测量结果和进度调整情况，可能会对进度基准和/或项目管理计划的其他组成部分提出变更请求
+选项D偏差分析是工具，选项C变更请求是输出，选项B和A是后续的纠正措施。
+
+156.参考答案：C，参见培训讲义P179。
+解析：BAC=100万，EV=50万，AC=60万，PV=50万，CPI=50/60=0.83，SPI=1。
+
+157.参考答案：A，参见培训讲义P176。
+解析：
+非典型偏差：ETC=BAC-EV=0，说明EV=BAC，项目已经完成。
+典型偏差：ETC=（BAC-EV）/CPI，题目说了CV=0，成本符合，那么CPI=1，
+ETC= ETC=（BAC-EV）/CPI—ETC=BAC-EV=0，说明EV=BAC，项目已经完成。
+
+158.参考答案：D，参见培训讲义P178。
+解析：
+BAC=200+300+400+500=1400
+EAC=AC+ETC=150+350+420+480=1400
+EAC=BAC，符合预算
+计划值：活动A（200）+活动B（300）=500
+实际值：活动A（150）+活动B（350）=500
+结论：实际与计划一致
+
+计划值：活动C（400）+活动B（500）=900
+最新的估算：活动C（420）+活动B（480）=900
+结论：将会符合最初的预算，也就是选C
+
+159.参考答案：A，参见培训讲义P155。
+
+160. 参考答案：D，参见培训讲义P162。
+
+------------------------------------------------------------------------------------------------------
+
+161.参考答案：D，参见培训讲义P171第一个PPT最后一段话。
+
+162.参考答案：C，参见培训讲义P179。
+
+163.参考答案：D，参见培训讲义P191。
+
+164.参考答案：B，参见培训讲义P199。
+
+165.参考答案：D，参考培训讲义P207。
+
+166.参考答案：D。
+
+167.参考答案：A，参见培训讲义P194。
+
+168.参考答案：A，参见培训讲义P199。
+
+169.参考答案：D ，参见培训讲义P211。
+
+170.参考答案：A，参见培训讲义P200-201。
+
+171.参考答案：B，参考培训讲义P192。
+
+172.参考答案：B，参见培训讲义P192。
+
+173.参考答案：B，参见培训讲义P207。
+
+174.参考答案：A，参见培训讲义P200。
+
+175.参考答案：B，参见培训讲义P210。
+
+176.参考答案：A，参见培训讲义P202。
+
+177.参考答案：D，参见培训讲义P202。
+
+178.参考答案：B，参见培训讲义P189。
+
+179.参考答案：A，参见培训讲义P211。
+
+180.参考答案：A，参见培训讲义P209。
+
+-------------------------------------------------------------------------------------
+
+181.参考答案：B,参见培训讲义P200。
+
+182.参考答案：A，参见培训讲义P211。
+
+183.参考答案：C，参见培训讲义P191。
+
+184.参考答案：A，参见培训讲义P203。
+
+185.参考答案：A，参见培训讲义P199。
+
+186.参考答案：C，参见培训讲义P192。
+
+187.参考答案：B，参见培训讲义P200。
+
+188.参考答案：B，参见培训讲义P200。
+
+189.参考答案：C，参见培训讲义P189。
+
+190.参考答案：D，参见培训讲义P192。
+
+191.参考答案：B，参见培训讲义P193、P207。
+解析：可以理解为质量成本适用于那些过程？
+
+192.参考答案：C，参见培训讲义P189-191。
+
+193.参考答案：B，参见培训讲义P193。
+解析：质量成本是规划质量管理的工具工具。控制图在PMBOK指南第三版不是规划质量的工具，到了PMBOK指南第四版、五版才是。
+
+194.参考答案：B，参见培训讲义P199。
+解析：题干中有一关键词“主要因素”。
+
+195. 参考答案：B，参见培训讲义P203。
+
+196.参考答案：D。
+解析：外部缺陷成本，项目验收是根据项目范围说明书中的验收标准进行，不是证明没有缺陷，是证明符合要求就行。
+
+197.参考答案：A，参见培训讲义P199。
+
+198.参考答案：A，参见培训讲义P200。
+
+199.参考答案：B。
+
+200.参考答案：B，参见培训讲义P196。
+解析：根本原因分析可用因果图、头脑风暴法。
