--- a/manage/pmp/7-成本管理.md
+++ b/manage/pmp/7-成本管理.md
@@ -1228,3 +1228,31 @@ EAC=BAC，符合预算
 
 200.参考答案：B，参见培训讲义P196。
 解析：根本原因分析可用因果图、头脑风暴法。
+
+# https://wenku.baidu.com/view/35bcb322366baf1ffc4ffe4733687e21af45ffda.html
+项目成本核算应该在什么时候进行( )
+
+A．成本发生时
+B．实际支付时
+C．实际交货时
+D．在上述各时间均可，取决于组织的具体需要
+正确答案
+D
+答案解析
+[考点与答题技巧] 项目成本核算的时间。进行成本核算的时间，取决于组织的财务会计制度。
+
+# 20121208仿真试题(200+50)--答案_百度文库 
+    https://wenku.baidu.com/view/b93a33e8941ea76e58fa04d6.html
+新项目经理接受一家公司雇佣，负责管理一个与之前项目类似的项目。
+项目经理使用了类比估算技术估算成本。为了完成项目估算，项目经理应该考虑什么？
+A．与项目发起人协商B．执行偏差分析C．审查项目章程D．执行储备分析
+【答案】：D。成本估算的工具，仅有D。A通常不选，B属于监控过程组，C无关
+
+# PMP 真题试题100样题 加入最新2013年06月真题_jxmpmp_231_新浪博客 
+    http://blog.sina.com.cn/s/blog_c13518890101j6dp.html
+76、在状态会议上，项目经理注意到项目超出预算。项目经理觉得应该早点发现这个问题，那么请问：什么才能有助于提前发现这种情况？ 
+A. 项目开始之前，编制一份定义明确的项目章程
+B. 使用德尔菲技术，专门识别与成本有关的风险
+C. 在监控流程中使用成本管理计划
+D. 定期计算进度偏差
+答案：C
