--- a/manage/pmp/8-质量.md
+++ b/manage/pmp/8-质量.md
@@ -57,3 +57,537 @@ A . A、决定执行组织对项目的支持效率
 B . B、即可为主观的亦可为客观的
 C . C、是产品的一些特殊特征，据此进行设计、构减、测试产品
 D . D、B和C
+
+# [转载]每天精选四道PMP考试题目，大家试试手  6月4日_Robin_新浪博客 
+    http://blog.sina.com.cn/s/blog_785391d701015y1l.html
+
+7.项目进行中，发起人要求项目提前1个月完成，项目经理应使用下列哪个管理计划？
+A. 变更管理计划
+B． 进度管理计划
+C． 范围管理计划
+D． 资源控制计划
+ 
+18．项目X处于测试阶段，并落后于进度，测试团队测试出缺陷，并将其报告给测试经理这些缺陷归因于11项需求中的4项需求。由于项目落后进度，项目经理对未解决的缺陷担心，项目经理应该采用哪种工具？
+A．直方图
+B．帕累托图
+C．鱼骨图
+D．快速跟进或者赶工
+ 
+19.项目经理登记了一项变更请求，并将其发给项目发起人批准，项目发起人回复说批准过程不是他们的责任，项目经理应？
+A．与发起人一起查看批准的变更管理计划
+B．与发起人定义和批准变更管理计划
+C．与发起人确定CCB的责任
+D．与发起人确认变更管理计划的批准
+ 
+20．项目比原计划推迟了一个月完成，但客户比较满意，公司高层经理对该项目经理的成绩很满意并进行了奖励。这时公司接到一个更重要的项目，该项目经理有可能被委任，他下一步应该怎么做？   
+A．准备新项目的管理计划
+B．指导公司其他项目经理,介绍管理方法
+C．开庆功会,发放奖金
+D．总结经验教训，更新公司组织过程资产
+ 
+答案及解释：
+17.答案B
+参考分析：发起人提出进度变更，而进度管理计划指导进度的规划与控制，进度变更属于进度控制范畴因此选B。  题干特指进度变更，变更管理计划过于笼统，因此不选。
+本题曾在4月19日博客中详细解答，见http://blog.sina.com.cn/s/blog_65d12fad0100yob4.html
+18.答案B
+参考分析：题目问解决缺陷要利用什么工具？帕累托图是排序后的直方图，排序的目的是为有重点地采取纠正措施，符合题目要求，因此选B。见PMBOK 8.3.2.5。
+19.答案B
+参考分析:题目显示，项目经理和发起人对于变更批准的责任者有意见分歧，最可能的原因就是没有变更管理计划，因此选B。
+ 
+20.答案D
+参考分析：无论项目完成或终止，都必须进行项目收尾。题干显示项目完成，答案中只有D是项目收尾的必须工作，因此选D
+
+# 项目风险管理课程作业及答案4_学霸学习网 
+    http://www.tceic.com/h86741165901020207409ijj.html
+    项目风险管理作业 4
+单项选择题
+第 1 题 下列各项都被认为对技术风险的评价至关重要，除了（ A、计划的步骤 B、对技术风险予以特别的关注，而不仅是在考虑进度及成本风险时顺便考虑了技术风险 C、关键路径分析 D、步骤及结果的存档 答案：C ）。
+
+第 2 题 某项目的成本或进度计划经常由管理层作出指示。在此情况下项目经理应采取以下所有行动， 除了（ ）。 A、进行风险评估 B、将后果告知管理层 C、就范围进行谈判 D、接受它而不事先采取任何行动 答案：D
+
+第 3 题 针对固定价合同，付款的风险是：（ A、承包商的实际成本 B、承包商的成本加固定费用 C、在承包商的投标中未公开的应急费用
+
+）。
+
+D、根据风险评估预测所作的预测成本并用于处理风险 答案：C
+
+第 4 题 以下各项关于规避风险的陈述除了（ A、关心消除引起风险的元素 B、包括决定不对风险过高的项目进行投标 C、风险倘若发生，就接受后果
+
+）都是正确的。
+
+D、当客户有利于降低风险时，将风险遗留给客户 答案：C
+
+第 5 题 某风险事件已经发生并产生了占总项目成本 15%的影响， 下列哪些行动是最合适的措施？ （ A、通知正确的项目干系人 B、更新项目预算 C、控制成本 D、与团队成员一起采用集体自由讨论的方式 答案：A
+
+）
+
+第 6 题 应急计划编制包括（ ）。 A、定义一旦已识别风险发生后要采取的步骤 B、建立一个管理储备用于未计划的花销 C、准备一个独立文件，和整体项目计划分隔开 D、确定在项目执行阶段需要进行的调整 答案：A
+
+第 7 题 在执行项目期间，发生一个在风险管理计划中没有涵盖的重大问题，这时你将：（ A、建立一个权变措施 B、召开会义采用头脑风暴法 C、向高层管理汇报 D、从管理储备抽出资金作为处理成本 答案：A
+
+）。
+
+第 8 题 将用以研究的风险列表是（ A、风险识别 B、风险定性分析 C、风险定量分析 D、风险应对规划 答案：D
+
+）的一个输出。
+
+第 9 题 个人承担风险的意愿是取决于（ A、决策树模型 B、蒙特卡罗方法
+
+）。
+
+C、敏感分析 D、效用功能 答案：D
+
+第 10 题 某项目经理刚刚完成了项目的风险应对计划，他下一步该做（ A、确定项目整体风险的比率 B、开始分析哪些在产品中发现的风险 C、在工作分解结构上增加任务 D、进行项目风险审核 答案：C
+
+）。
+
+第 11 题 EVMS 报告显示 CV=SV=O，然而，由于遗漏了一个里程碑，整个项目将推迟。以下哪项报告不 充分？（ ） A、风险分析报告 B、沟通计划偏差 C、资源管理计划 D、关键路径状态 答案：D
+
+第 12 题 许多小组成员就快要一起离开公司，项目经理首先应该做什么？（ A、修订 WBS B、招募小组成员 C、实施风险应对 D、修订线性职责图 答案：C
+
+）
+
+第 13 题 哪个过程是从风险拥有者处接受输入？（ A、风险管理规划 B、风险识别 C、风险定性分析 D、风险应对规划
+
+）
+
+答案：D
+
+第 14 题 您正在审查各种各样的瑕疵和质量控制拒收的缺陷。利用有限的资源，您希望查明最经常发 生的改善这种情况之机会的主要领域并且确定纠正行动，作为项目经理，以下哪一种工具最能满足您 的需求？（ ） A、因果图 B、帕累托图 C、散点图 D、相互关系图 答案：B
+
+第 15 题 以下均主要用于项目控制，除了（ A、里程碑分析 B、业绩报告 C、挣值分析 D、效益成本分析 答案：D
+
+）。
+
+第 16 题 在一个复杂的大型项目中接受或拒绝提出的变更的权限归谁所有？（ A、发起人 B、客户 C、变更控制委员会 D、项目经理 答案：C
+
+）
+
+第 17 题 在管理一个项目时，您怀疑一个班子成员曾将客户信息向客户的一个竞争对手披露。您首先 应当（ ）。 A、与其他经理讨论该班子成员 B、与其他班子成员讨论您的怀疑 C、警告客户注意可能的风险 D、与其他班子成员面谈以进一步评估情况 答案：C
+
+第 18 题 项目已执行八个月。迄今的实际成本为 900 万美元。您必须汇报项目是否将按预算完成，您 需要何种补充信息？（ A、预定工程的预算费用 B、剩余项目工程的费用 C、已经使用了多少应急准备金 D、迄今使用的资金额 答案：A ）
+
+第 19 题 出于以下所有原因应终止项目，除了（ A、项目不再符合公司目标 B、项目范围已作重大改变 C、无法提供完成项目活动的资源 D、项目融资业已取消 答案：C
+
+）。
+
+第 20 题 给客户的月度报告表明，进度偏差为零。然而项目班子成员知道，里程碑已经延误并将造成 项目全面延误。下面哪一项未充分报告？（ A、沟通计划偏差 B、资源计划管理 C、关键路径状况 D、风险分析 答案：A ）
+
+# 2015年真题讨论之51-55题_陈亚洲_新浪博客 
+    http://blog.sina.com.cn/s/blog_b725726e0102vf0x.html
+
+    51.When developing a process improvement plan.what does the project manager need to identify?
+A.Stakeholders.
+B.Activities which enhance value.
+C.Subject matter experts.
+D.Marketplace conditions.
+项目经理在制定过程改进计划时需确认哪项内容？
+A、 利害关系者
+B、 提升价值的活动
+C、行业专家
+D、市场条件
+解析：B。参阅PMBOK·P241可知，过程改进计划详细说明进行过程分析的各个步骤，以便识别增值活动。此题选择B，曾引发B项的内容是否就是识别增值活动呢？这其实是翻译的问题，但是英文作为考试中的第一语言没有问题，不管是译为“提升价值的活动”还是译为“识别增值活动”，其对应教材中的英文都是：identify activities which enhance their value.
+ 
+52.Two project team members disagree about a solution,which creates a stressful atmosphere between the team members.What should the project manager do next?
+A.Document the issue in the risk management log.
+B.Treat the conflict as an issue to be solved by examining altematives.
+C.Escalate the conflict to the project sponsor.
+D.Consider the issue over night and make a decision in the morning.
+两名项目团队成员都对某个解决方案意见不一致，在两名团队成员之间造成紧张气氛。项目经理下一步应该怎么做？
+A、 在风险管理日志中记录该问题。
+B、 将冲突当作问题对待，通过检查备选方案来解决。
+C、将逐步升级的冲突上报给项目发起人。
+D、连夜考虑该问题，并在早晨决定。
+解析：A。应该是先记录问题，再设法解决问题。因为面对问题的处理办法是先记录问题状态，再提供问题方案，然后提出解决问题的结果，这些都需要维护到问题日志里面。并且需要分批次地记录和维护问题日志。因为“解决方案不一致”，极有可能导致工作停滞，从而对目标或许多方面都可能产生实实在在的影响。
+ 
+53. Collected after the project information needs, the project team to determine the scope of the project. To continue the project, what should the project manager do next?
+A.Develop a project schedule.
+B.Gradually led to the part of management and measurable.
+C.To estimate the duration of the project and resource requirements.
+D.Estimated costs.
+收集完项目信息需求之后，项目团队确定了项目范围。若要继续项目，项目经理下一步应该怎么做？
+A、制定项目进度表。
+B、逐步促成可管理和可衡量的部分。
+C、估算项目工期和资源需求。
+D、估算成本。
+解析：B。收集完需求后，确定了项目范围，接下来项目经理应该做什么呢？项目范围说明书确认后，需要项目相关干系人确认并批准，然后创建WBS。而创建WBS就是把项目可交付成果和项目工作分解成较小的、更易于管理的组成部分的过程。综合起来看，只能选择B。至于ACD都是WBS制作出来后需要进一步完成的工作。
+ 
+54.The project manager completes the identify Risks Process.Which one of the following information should be contained to the risk register at this stage?
+A.Risk prioritization and list of potential responses.
+B.List of identified risks and list of potential responses.
+C.List of potential responses and risk categorization.
+D.List of identified risks and risk prioritization.
+项目经理完成了识别风险过程。在这个阶段，下列哪一项信息应该包含进风险登记册中？
+A、 风险优先顺序和可能的应对措施清单。
+B、 已识别的风险清单和可能的应对措施清单。
+C、可能的应对措施清单和风险分类清单。
+D、已识别风险的应对措施和风险优先顺序。
+解析：B。本题相对简单，其实就是考查识别风险的输出——风险登记册——的内容，参阅PMBOK·P327可知，包括已识别的风险清单和潜在的应对措施清单。不管选项当中如何翻译，其英文始终是不变的，即List of identified risks和List of potential responses。
+ 
+55.The project manager meets the project sponsor and provides a project update.The sponsor finds this change would not be great if changes suggested by the uses could be included to ensure the project performs better.The sponsor believes this is a small issue and can be completed easily before the next deadline.What should the project manager do next?
+A.Include requirements of the team and ensure that the sponsor’s thoughts are incorporated.
+B.Submit suggested changes and perform a variances analysis.
+C.Inform the sponsor that the suggestions will be considered after the next dealine.
+D.Explain to the sponsor that project requirements have already been finalized.
+项目经理遭遇发起人提供的一个需要更新的项目。发起人发现这种变更不会很大，并且可以确保项目性能会更好。发起人认为这是一个小问题，并且这种变更可以在项目的最后期限来临之前轻易完成。项目经理接下来应该怎么做？
+A、包含项目团队需求和保证发起人的想法具体化。
+B、提交变更请求，并执行偏差分析。
+C、告知发起人，将会在下一个期限之后考虑该建议。
+D、向发起人解释，项目需求已经最终确定。
+解析：B。从题干来看，这与“项目团队需求”不相干，据此可以排除A；C项是不愿意正视问题的存在，不愿意面对问题，这不是PMI主张的行为；D项其实也是回避发起人的问题。任何一个变更都必须是正式的，涉及进度基准的变更需要提交变更申请并被记录，到底是不是在项目最后期限来临之前轻易完成，需要执行进度偏差分析才能做出正确的判断。
+
+# PMP模拟题　第八章　项目质量管理_商老师_水手_新浪博客 
+    http://blog.sina.com.cn/s/blog_5488a33b010156yo.html
+
+    第八章  项目质量管理
+ 
+1．控制图中的控制上限和控制下限表明(    )。
+A．项目团队不受处罚的最大偏差范围             B．产品质量合格与不合格的分界线
+C．生产过程不需采取纠正措施的界限             D．判断项目成败的重要统计依据
+ 
+2．精确不同于准确，因为(    )。
+A．精确是指重复测量的结果的离散度很小，准确是指单次测量的结果与目标值很接近
+B．准确是指重复测量的结果的离散度很小，精确是指单次测量的结果与目标值很接近
+C．精确是用于测量成本的，准确是用于测量质量的
+D．精确是用于测量质量的，准确是用于测量进度的
+ 
+3．实施质量保证的主要效益包括(    )。
+A．生产率降低，成本降低，干系人满意度提高
+B．生产率提高，成本降低，干系人满意度提高
+C．生产率提高，成本增加，干系人满意度提高
+D．生产率降低，成本增加，干系人满意度提高
+ 
+4．流程图中通常包括以下所有，除了(    )。
+A．每个步骤的活动                                B．每个活动的责任人
+C．相关的决策点                                  D．相关活动的时间顺序
+ 
+5．关于质量的说法，以下哪项是正确的？(    )
+A．质量偏低不是问题，等级偏低是个问题
+B．质量是一系列内特性满足要求的程度
+C．质量中明确或隐含的需求是需求开发的依据
+D．质量决定着项目产品的功能多少
+ 
+6．过程改进旨在(    )。
+A．消除非增值活动，减少浪费                                   B．提高项目产品质量
+C．降低生产成本                                               D．提高干系人满意度
+ 
+7．对用途相同但技术特性不同的产品或服务的级别分类，通常用于描述(    )。
+A．产品或服务的等级                                           B．产品或服务的质量
+C．产品或服务满足需求的程度                                   D．产品或服务的成本多少
+ 
+8．以下哪个不是实施质量控制过程的输出？(    )
+A．批准的变更请求                                               B．确认的变更
+C．确认的可交付成果                                             D．完成的核对表
+ 
+9．当一个过程处于受控状态中，对此过程可以怎么做？(    )
+A．不应该调整该过程
+B．应该调整该过程，以便提高产品质量
+C．应该在项目阶段结束时，及时调整该过程
+D．应该为了使工作更具挑战性，而调整该过程
+ 
+10．质量审计是以下哪个过程的工具？(    )
+A．规划质量          B．实施质量保证          C．实施质量控制          D．流程再造
+ 
+11．质量审计的目标包括以下所有，除了(    )。
+A．总结质量管理的经验教训              B．识别谁应该对质量问题负主要责任
+C．识别有效的质量管理做法              D．确定对质量政策的遵守程度
+ 
+12．下列哪项属于一致性质量成本的例子？(    )
+A．返工          B．质量培训          C．废品          D．保修费用
+ 
+13．以下关于标杆对照的说法都是正确的，除了(    )。
+A．识别可比项目的最佳实践，提出本项目的质量改进意见
+B．建筑项目不能用软件开发项目的做法作为标杆
+C．可以为本项目的绩效考核提供一个基础
+D．可以据此确定项目质量标准
+ 
+14．质量控制由谁来实施？(    )
+A．项目团队成员          B．质量控制部门          C．高级管理层              D．职能部门经理
+ 
+15．以下哪个不是项目质量保证的特性？(    )
+A．开展过程改进                                               B．检查特定可交付成果的质量
+C．重新评价质量标准的合理性                                   D．由项目团队开展
+ 
+16．在项目监控过程中，你可以做出项目产品不符合要求的结论，如果(    )。
+A．质量偏差超过控制上限或下限                      B．质量偏差超过规格上限或下限
+C．质量偏差呈现随机变化                            D．质量偏差呈现有规律的变化
+ 
+17．实施质量保证过程的输入包括(    )。
+A．绩效报告                          B．工作绩效测量结果
+C．质量控制测量结果                  D．质量核对表
+ 
+18．以下哪项最有助于减少缺陷率？(    )
+A．改进过程          B．测试成品          C．定义质量标准          D．制定进度基准
+ 
+19．以下哪个不属于石川七大基本质量工具？(    )
+A．控制图               B．鱼骨图               C．统计抽样          D．流程图
+ 
+20．质量是指(    )。
+A．符合三重制约          B．符合要求          C．优于同类产品          D．产品的功能众多
+ 
+21．根据项目管理计划的规定，在项目的每个阶段都要进行质量审计。这种审计是哪个过程的工作?(    )
+A．实施质量保证          B．结束项目或阶段              C．规划质量          D．实施质量控制
+ 
+22．以下关于质量测量指标的说法，哪一个是正确的？(    )
+A．质量测量指标应该定的略高一些，以便使工作具有挑战性
+B．质量测量指标通常以质量核对表的形式出现
+C．质量测量指标不需要非常具体，以便有一定的灵活性
+D．质量测量指标是对质量标准的非常具体的操作性定义，用于质量保证和质量控制中
+ 
+23．项目经理关注项目能够满足进行该项目的本来需求的程度。项目经理在做(    )。
+A．整合管理             B．时间管理              C．质量管理                   D．范围管理
+ 
+24．以下关于项目质量管理的说法都是正确的，除了(    )。
+A．项目质量管理既要考虑项目管理的质量，又要考虑项目产品的质量
+B．项目质量管理同时兼顾项目过程的质量和项目结果的质量
+C．项目质量管理方法适用于所有的项目，无论项目会产出怎样的结果
+D．项目质量管理是为了保证项目结果达到尽可能高的质量标准
+ 
+25．以下都是质量保证的目的，除了(    )。
+A．提高项目干系人对项目将要达到质量要求的信心
+B．进行过程持续改进，减少非增值活动
+C．消除导致质量不合格的原因
+D．重新评价质量标准，确保质量标准的可行性
+ 
+26．控制图在均值线的一侧有7个连续的数据点，这时应该怎样处理？(    )
+A．不采取任何行动，因为没有超出控制界限
+B．告诉客户
+C．停止生产
+D．在继续生产的同时，查明原因，寻求解决办法
+ 
+27．质量成本包括以下所有，除了(    )。
+A．预防成本                B．评估成本               C．失败成本              D．生产成本
+ 
+28．项目的质量保证工作通常由谁来执行?(    )
+A．项目质量保证部门                           B．项目团队成员
+C．高级管理层                                 D．项目发起人
+ 
+29．项目经理正在检查项目执行期间所遇到的问题、制约因素以及所发现的非增值活动，并设法在以后克服这些问题以及减少非增值活动。他正在做(    )。
+A．规划质量          B．实施质量保证          C．实施质量控制          D．实施质量审计
+ 
+30．按照学习曲线理论，在重复进行同一工作时(    )。
+A．工作出错的可能性大大降低
+B．随着生产速度的提高，生产成本下降
+C．随着生产产量的提高，单位产量的耗时会有规律地减少
+D．应该尽量实现自动化
+ 
+31．在规划质量过程中，项目经理需要确定将来用于检查质量的目标值、控制界限、规格界限以及进行质量检查的频率。他应该使用以下哪个工具与技术？(    )
+A．控制图               B．标杆对照                C．流程图                    D．实验设计
+ 
+32．统计抽样是常用的质量检查方法。项目管理团队需要在以下哪个过程中确定进行统计抽样的频率、样本数以及相应的统计分析方法?(    )
+A．实施质量保证             B．规划质量            C．实施质量控制                  D．控制进度
+ 
+33．以下哪个是对质量审计的正确描述？(    )
+A．质量审计是规划质量过程的工具与技术
+B．质量审计是实施质量控制过程的工具与技术
+C．质量审计是实施质量保证过程的工具与技术
+D．质量审计是改进质量过程的工具与技术
+ 
+34．以下关于质量成本的说法，哪个是正确的？(    )
+A．增加评估成本，以便节约其他成本        B．增加预防成本，以便节约其他成本
+C．增加外部失败成本，以便节约其他成本    D．增加内部失败成本，以便节约其他成本
+ 
+35．可以用散点图表示两个变量之间的相关性。两个变量之间的关系的密切程度，取决于数据点分布(    )。
+A．靠近某条横直线的程度                           B．靠近某条竖直线的程度
+C．靠近某条曲线的程度                             D．靠近对角线的程度
+ 
+36．质量审计可用于下列所有目的，除了(    )。
+A．识别质量管理中的最佳实践                    B．认定质量责任该由谁来承担
+C．总结质量管理的经验教训                      D．确认已批准的变更请求的实施情况
+ 
+37．以下哪个方法涉及把本项目计划要采取的做法与其他项目的做法进行比较，来识别最佳做法，形成改进意见？(    )
+A．实验设计            B．标杆对照           C．过程改进           D．统计抽样
+ 
+38．实验设计的特点是(    )。
+A．每次考察一个变量的变化对结果的影响
+B．每次考察几个变量的一种组合对结果的影响
+C．把本项目的质量做法与其他项目的质量做法进行比较
+D．实施质量控制过程的一种技术
+ 
+39．PDCA循环是项目管理五大过程组的理论基础。该循环又被称为戴明环，是由谁最先提出的？(    )
+A．戴明(Deming)                                           B．休哈特(Shewhart)
+C．克劳斯比(Crosby)                                       D．朱兰(Juran)
+ 
+40．实验设计可以帮助降低产品性能对环境变化或其他变化的敏感性，使产品性能更加稳定。尽管如此，实验设计并不等同于敏感性分析，因为(    )。
+A．实验设计考察多个变量的组合的变化对结果影响，而不是一次只考察一个变量的变化
+B．实验设计用于质量管理，而敏感性分析用于成本管理
+C．实验设计是一种统计方法，而敏感性分析是一种风险分析方法
+D．实验设计是美国人首先提出来的，而敏感性分析是日本人首先采用的
+ 
+ 
+
+ 
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+C
+A
+B
+B
+B
+A
+A
+A
+A
+B
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+B
+B
+B
+B
+B
+B
+C
+A
+C
+B
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+A
+D
+C
+D
+C
+D
+D
+B
+B
+C
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+A
+B
+C
+B
+D
+B
+B
+B
+B
+A
+分享： 
+
+# 项目质量管理练习题 - 中学课件 - 道客巴巴 
+    http://www.doc88.com/p-8179208239891.html
+
+# 圣略PMP考试真题放送：质量管理【pmp考试真题吧】_百度贴吧 
+    https://tieba.baidu.com/p/4206416924?red_tag=3009892337&traceid=
+
+【PMP考试专项训练】质量管理7大工具总结及真题
+by——圣略咨询 PMP/ACP咨询顾问 丁仿
+以上考试都是高频关键词，记住了这些关键词，考试可高枕无忧。
+
+牛刀小试一把：
+1、以下哪个工具可用于挖掘导致某个具体质量缺陷的各种根本原因？（ ）
+A. 帕累托图 B. 鱼骨图 C. 控制图 D. 散点图
+
+2、可借助帕累托图来展示下列哪项所生产的数据？（ ）
+A. 因果图 B. 核查表 C. 散点图 D. 控制图
+
+3、项目情况纷繁复杂，问题频发，为找到主要问题，采取重点措施，项目经理可以使用（ ）
+A. 因果图 B. 散点图 C. 流程图 D. 帕累托图
+
+4、在规划质量管理过程中，项目经理需要确定将来用于检查质量的目标值、控制界限、规格界限，以及进行质量检查的频率。他应该使用以下哪种工具与技术？（ ）
+A. 控制图 B. 标杆对照 C. 流程图 D. 实验设计
+
+5、对于重复性的生产过程，控制图的控制界限通常设置在什么位置？（ ）
+A.±1ó（西格玛） B. ±2ó（西格玛） C. ±3ó（西格玛） D. ±6ó（西格玛）
+
+6、可以用散点图表示两个变量之间的相关性。两个变量之间的关系的密切程度，取决于数据点分布（ ）
+A. 靠近某条横直线的程度 B.靠近某条竖直线的程度
+C. 靠近某条曲线的程度 D.靠近某条斜线的程度
+
+7、由于质量控制问题，项目落后于进度。没有识别缺陷的明显模式。使用定性方法，应使用哪一种质量控制来确定缺陷来源？
+A. 直方图
+B. 帕累托图
+C. 散点图
+D. 因果图
+
+8、项目目标是为汽车行业开发改进部件，对原型的测量发现，这些通常都超出技术规定界限。分析显示造成这些差异的原因有多种。项目团队如何确定应首先解决哪个原因？
+A. 鱼骨图
+B. 控制图
+C. 帕累托图
+D. 趋势图
+
+9、为了限制与变更有关的风险。项目经理执行了一个审计，确保最小/最大值要求能够被正确执行，测试将会进行 10 次，测试结果将会用图表表示用于可视化分析。下列哪一项质量工具将帮助项目经理判定测试是否成功？
+A. 控制图
+B. 统计抽样
+C. 帕累托图
+D. 散点图
+
+10、项目团队是用一种质量工具，能用图表描绘在一个特定组内的频率，项目团队正在使用的是哪一项质量工具？
+A. 散点图
+B. 项目直方图
+C. 统计抽样
+D. 项目核对表
+
+11、开发团队观察到两个主要项目变量向相反的方向移动，可能导致项目处于风险当中。项目经理用什么工具或技术来确定这两个变量是如何密切相关的？
+A. 散点图
+B. 帕累托图
+C. 直方图
+D. 偏差分析
+
+12、某个产品的生产线存在多个缺陷。高级项目经理让项目经理按类别整理缺陷数量，并按照缺陷排列优先顺序。高级经理向项目经理要求的是使用哪一种质量控制工具类型？
+A. 散点图
+B. 因果图
+C. 鱼骨图
+D. 帕累托图
+
+B
+D
+A
+A
+D
+D
+D
+C
+A
+B
+A
+D
+
+
+
+# http://www.ruantiku.com/shiti/330114.html
+以下隐藏部分为真题答案及解析，回复可见参考答案及解析。建议各位贴上自己的正确率
+
+
+下面是管理项目时可能出现的四种风险。从客户的角度来看，如果没有管理好（ ）,将会造成最长久的影响。
+A．人力资源风险    
+B．进度计划风险    
+C．费用风险    
+D．质量风险
+
+软题库参考答案：D
