--- a/manage/pmp/8-质量.md
+++ b/manage/pmp/8-质量.md
@@ -1,3 +1,13 @@
+# PMP试题第八章 项目质量管理-历年试题资料-中培课堂
+    http://www.zpedu.com/SubjectInfo1458.html
+# pmp资格认证考试分类模拟题项目质量管理(四) - 职业资格 - 道客巴巴 
+    http://www.doc88.com/p-5496378679931.html
+# 项目质量管理练习题 - 中学课件 - 道客巴巴 
+    http://www.doc88.com/p-8179208239891.html
+# PMP考试重点题解析201道题 - 职业资格 - 道客巴巴 
+    http://www.doc88.com/p-5793110529574.html
+
+
 
 # http://www.cnitpm.com/st/345794764.html
 项目经理希望将质量管理技术引进到项目中。下列哪一个方法可以作为持续质量改进的基础？
@@ -6,9 +16,18 @@ B、计划-实施-检查-行动循环
 C、标杆对照
 D、成本效益分析
 
-
-
 信管网参考答案： B（仅供参考，欢迎评论交流） 
+
+# http://www.step365.com/thread-6440-1-1.html
+你的项目中有几个执行活动正在进行中，你开始关注报告你团队成员做的工作进展的准确度。你如何能查证是否存在问题？ 
+
+         A.质量审计
+         B.风险量化报告
+         C.回归分析
+         D.蒙特卡罗分析
+（本文来自“思步网”，转载请注明文章出处：http://www.step365.com/thread-6440-1-1.html ）
+解析：质量审计是质量保证过程的重要组成部分，他能帮助你评估项目是否遵循过程要求。答案是A
+（本文来自“思步网”，转载请注明文章出处：http://www.step365.com/thread-6440-1-1.html ）
 
 # http://www.cnitpm.com/st/2578.html
 要使客户满意，应做到以下哪项的结合？
@@ -19,9 +38,6 @@ D 成本高效的解决方案和可交付成果的接受
 
 该页面已过期，请查看新页面：www.cnitpm.com/st/2578888.html
 信管网参考答案：C（仅供参考，欢迎评论交流）
-
-# pmp资格认证考试分类模拟题项目质量管理(四) - 职业资格 - 道客巴巴 
-    http://www.doc88.com/p-5496378679931.html
 
 # https://wenku.baidu.com/view/7f305b4b76232f60ddccda38376baf1ffc4fe325.html
 对持续质量改进的需求的主动力是 ______ 。 
@@ -499,8 +515,7 @@ B
 A
 分享： 
 
-# 项目质量管理练习题 - 中学课件 - 道客巴巴 
-    http://www.doc88.com/p-8179208239891.html
+
 
 # 圣略PMP考试真题放送：质量管理【pmp考试真题吧】_百度贴吧 
     https://tieba.baidu.com/p/4206416924?red_tag=3009892337&traceid=
@@ -591,3 +606,6 @@ C．费用风险
 D．质量风险
 
 软题库参考答案：D
+
+
+
